<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="PRG_EXAMPLE" Id="{34d2d536-f9ed-43e0-9c3b-708d06eee0ae}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_EXAMPLE
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Following is an example of how the devices are instantiated and interlocked*)

(*Gauges*)
GEM1_GPI_10(PG=>);
GEM1_GCC_10(PG:=GEM1_GPI_10.PG,IG=>);
GEM1_GPI_20(PG=>);
GEM1_GCC_20(PG:=GEM1_GPI_20.PG,IG=>);

(*valves*)
GEM1_VGC_10(i_stUSG := GEM1_GCC_10.IG, i_stDSG:= GEM1_GCC_10.IG,i_xDis_DPIlk := TRUE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);


(*Turbo vent valves NO*)
GEM1_VVC_10(i_stPTM :=GEM1_PTM_10.iq_stPtm); 

(*Turbo Pumps*)
GEM1_PTM_10.i_xExtILKOk := F_TurboExtILK_NO(GEM1_PTM_10.iq_stPtm, GEM1_GPI_11.PG,
						GEM1_GPI_10.PG,GEM1_VVC_10.q_stValve,GEM1_PMF_10.iq_stPFO);
GEM1_PTM_10(i_stGauge:=GEM1_GPI_11.PG,i_rMaxBackingPressure :=0.01);


(*Roughing pumps*)
GEM1_PMF_10(VentValve:= GEM1_VVC_10.q_stValve, TurboIsOn:= (GEM1_PTM_10.M_TurboIsOn()));

]]></ST>
    </Implementation>
    <LineIds Name="PRG_EXAMPLE">
      <LineId Id="6" Count="24" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>